补充两数之和  三数之和

--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -4,6 +4,62 @@
 
 ## 数组
 
+### 两数之和，返回下标
+
+思路：哈希表  key值   value下标
+
+```python
+def two_sum(nums, target):
+    hashmap = {}  # 用于存储值和对应的下标
+    result = []   # 存储结果的列表
+
+    for i in range(len(nums)):
+        res_value = target - nums[i]
+        if res_value in hashmap.keys():  
+            result.append([i, hashmap[res_value]])  # 记录结果
+        # 无论是否匹配，都要加入当前值
+        hashmap[nums[i]] = i
+
+    return result
+```
+
+### ⭐️三数之和，返回元素值
+
+思路： [links](https://www.programmercarl.com/0015.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
+
+1. 排序 + 左右指针  
+2. 过滤重复值：当前值判断前一个元素是否重复、左右指针判断下一个元素是否重复
+
+```python
+result = []
+nums.sort()
+for i in range(len(nums)-2): # 跳过最后两位数，因为必须三个数
+    # 第二个元素开始 判断当前元素与之前元素重复则跳过
+    if i > 0 and nums[i] == nums[i-1]:
+        continue
+
+    left，right = i + 1，len(nums) - 1
+    while left<right: # 不要等号  必须三个数
+        total = nums[i] + nums[left] + nums[right]
+        if total < 0:
+            left += 1
+        elif total > 0:
+            right -= 1
+        else:
+            result.append([nums[i], nums[left], nums[right]]) # 记录一组解
+            # 两者都判断下一个元素，过滤相同解
+            while left<right and nums[right] == nums[right-1]:
+                right -= 1
+            while left<right and nums[left] == nums[left+1]:
+                left += 1
+            # 走到相同元素的边界，再走一步
+            right -= 1
+            left += 1
+return result
+```
+
+
+
 ### 1. 自身以外数组的乘积
 
 思路：前缀乘   后缀乘，不包含自身
@@ -102,50 +158,15 @@ for i in range(1, len(intervals)):
 return result
 ```
 
-### ⭐️7. 三数之和
-
-思路： [links](https://www.programmercarl.com/0015.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
-
-1. 排序 + 左右指针  
-2. 过滤重复值：基准值判断前一个元素是否重复、左右指针判断下一个元素是否重复
-
-```python
-result = []
-nums.sort()
-for i in range(len(nums)-2): # 必须三个数
-    # # 第二个元素开始 判断当前元素与之前元素重复则跳过
-    if i > 0 and nums[i] == nums[i-1]:
-        continue
-
-    left，right = i + 1，len(nums) - 1
-    while left<right: # 不要等号  必须三个数
-        total = nums[i] + nums[left] + nums[right]
-        if total < 0:
-            left += 1
-        elif total > 0:
-            right -= 1
-        else:
-            result.append([nums[i], nums[left], nums[right]]) # 记录一组解
-            # 两者都判断下一个元素，过滤相同解
-            while left<right and nums[right] == nums[right-1]:
-                right -= 1
-            while left<right and nums[left] == nums[left+1]:
-                left += 1
-            # 走到相同元素的边界，再走一步
-            right -= 1
-            left += 1
-return result
-```
-
 ### 8. 和为 K 的子数组
 
 题目：整数数组 nums 和一个整数 k ，统计和为 k 的子数组的个数 
 
 思路： 用前缀和+哈希表
 
-- 哈希表{前缀和：出现次数}
+- 哈希表{前缀和：出现次数}       
 
-- 初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
+  初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
 
 - `prefix[右]- 区间和k = prefix[左]`，则`prefix[左]`次数满足条件
 
@@ -193,8 +214,6 @@ words.reverse()
 # 3. 将单词连接成一个字符串，单词之间用空格分隔
 return ' '.join(words)
 ```
-
-
 
 ### 10. 移动零：所有 0 移动到数组的末尾
 
@@ -267,7 +286,7 @@ def longest_consecutive(nums):
 
 ```python
 for i in range(len(nums)):
-    while 1<=nums[i]<=len(nums) and nums[i]!=i+1: # 当前值满足交换提哦啊见
+    while 1<=nums[i]<=len(nums) and nums[i]!=i+1: # 当前值满足交换条件
         # 终止条件
         if nums[i]-1+1==nums[nums[i]-1]: # 即将交换的位置已匹配好
             break
@@ -287,7 +306,7 @@ return len(nums)+1
 
 
 
-### ⭐️13. 接雨水
+### ⭐️ 接雨水
 
 双指针思路： 1. 构建左最大值数组，包含自身  2. 右最大数组  3. 计算接水量，注意两侧柱子不存水
 
@@ -438,7 +457,7 @@ def findKthLargest(nums, k):
 
     # 3. 出堆  移除k-1个元素，堆顶就是第k大的元素
     for i in range(len(nums)-1,len(nums)-k,-1): # 左闭右开，差值就是元素个数
-        # （1）交换堆顶和堆底元素  （2）缩小堆范围 从根节点堆化
+        # （1）交换堆顶和堆底元素  （2）缩小堆范围 堆化根节点
         nums[0],nums[i]=nums[i],nums[0]
         # i指堆范围，持续缩小堆范围 堆结尾从n-1缩小为n-k+1,代表移除k-1个元素
         max_heap(nums,i,0) 
@@ -570,10 +589,6 @@ def isPalindrome(head):
     return True
 ```
 
-
-
-
-
 ### ❓5. 链表模拟两数之和 
 
 思路：少的链表高位为0、考虑进位
@@ -703,7 +718,7 @@ return result
 [视频讲解](https://www.bilibili.com/video/BV1Ns4y1o7uB?buvid=ZB4C53B2BBD061C34F8EB053DCC8271B5A7F&from_spmid=main.space-contribution.0.0&is_story_h5=false&mid=vFwLKO%2BwKIe1OV8Bmn8djA%3D%3D&plat_id=114&share_from=ugc&share_medium=iphone&share_plat=ios&share_session_id=63D630E1-0B89-43AD-9F25-8DCA15FA1DDB&share_source=WEIXIN&share_tag=s_i&timestamp=1735483510&unique_k=DGVdx3b&up_id=525438321&vd_source=867a12dbe5f2199cb2f7283321debf90)
 
 1. 单调栈：找到每个柱子左右两侧第一个小于它的位置。 （1）前后哨兵（2）存储下标值
-2. 面积= height  * （右边第一个小的下标值  -  左边第一个小于的下标值 -1 ）
+2. 面积= height当前值  * (右边第一个小的下标值  -  左边第一个小于的下标值 -1 )
 
 ```python
 def largestRectangleArea(heights):
@@ -735,30 +750,16 @@ def largestRectangleArea(heights):
 
 题目描述:  找出其中不含有重复字符的最长子串的长度。输入s = "abcabcbb"  输出: 3,即"abc" 
 
-思路：滑动窗口用set  添加add  移除remove，记录窗口内每个字符是否出现
-
 ```python
-# 动态窗口
-# 1. 什么时候扩大窗口？ 每步都在扩大
-# 2. 什么时候收缩窗口？ 窗口内都是不重复元素，如果当前右侧元素在窗口内出现重复值，一直收缩左侧元素直到窗口内不重复
-# 3. 什么时候更新结果？ 收缩完记录结果
-
-# 窗口参数
-window = set()  # 用于记录当前窗口的字符
-left, right = 0, 0  # 窗口为左闭右开 [left, right)
-max_length = 0  # 记录最大长度
-while right < len(s):  # 右边界移动范围是 0 到 n-1
-    char = s[right]
-    # 如果当前字符在窗口中，则收缩左边界  动态窗口
-    while char in window:
-        window.remove(s[left])
-        left += 1
-    # 将当前字符加入窗口
-    window.add(char)
-    # 更新最大长度
-    max_length = max(max_length, right - left + 1)
-    # 扩大右边界
-    right += 1
+from collections import deque # 双端队列
+windows=deque()
+max_length = 0   # 记录结果
+for i in range(len(s)):
+    # 当前元素是否加入窗口
+    while s[i] in windows:
+        windows.popleft() # 持续收缩左侧窗口
+    windows.append(s[i]) # 扩大右侧窗口
+    max_length=max(max_length,len(windows)) # 更新结果
 return max_length
 ```
 
@@ -793,7 +794,7 @@ def minWindow(self, s: str, t: str) -> str:
         
         # 3. 判断是否收缩窗口
         while left<right and valid==len(need.keys()): 
-            # 4. 记录结果
+            # 4. 更新结果
             if right-left<length:
               	start=left
                 length=right-left
@@ -864,7 +865,7 @@ tree = backtrack(nums)
 
 递归三步骤
 
-1. 参数及返回值   输入前序、中序
+1. 参数及返回值   前序数组、中序数组
 2. 终止条件   输入序列长度为空
 3. 单层递归逻辑
    1. 前序第一个节点 将中序拆成左右区间
@@ -1188,7 +1189,7 @@ def backtracking(s,startIndex):
         return
     for i in range(startIndex, len(s)): # i取值0~n-1
       	strr=s[startIndex:i+1]  # 切出来的子串
-        if strr == strr[::-1]: # 如果回文，才继续剩余部分的切分 
+        if strr == strr[::-1]: # 如果当前子串回文，再切分剩余部分
             path.append(strr)
             backtracking(s, i+1) # 纵向 从下一字符切割，判断其余是否仍为回文串
             path.pop() # 回溯
@@ -1244,7 +1245,7 @@ def jump(self, nums: List[int]) -> int:
         next_index= max(next_index,i+nums[i]) # 每步都更新下次最远到达的下标
         if i>cur_index:
             return -1 # 无法到达
-        elif i>cur_index:
+        elif i<cur_index:
             continue  # 继续走
         elif i==cur_index:
             # 更新下一步
@@ -1617,7 +1618,7 @@ return result
 
 ​	3.	**合并**：将子问题的解组合成原问题的解（如果需要）。
 
-1. 20个球怎么用天平找到轻的那个？
+### 1. 20个球怎么用天平找到轻的那个？
 
 思路
 
