--- a/解题方法论.md
+++ b/解题方法论.md
@@ -103,8 +103,7 @@ while left<=right: # 等于也要比 边界
         else:
             right=mid-1
     elif nums[left]==nums[mid]:
-        # 移到左边边界,继续查找
-        left+=1 
+        left+=1  # 无法判断，缩小左边界
 return -1
 ```
 
@@ -115,11 +114,13 @@ left,right=0,len(nums)-1
 min_value=float("inf") # 记录最小值
 while left<=right:
     mid=(left+right)//2
-    min_value = min(min_value,nums[mid])  # mid持续记录
+    min_value = min(min_value,nums[mid])  # 持续更新最小值
     if nums[mid]>nums[right]: # 右边界无序
         left=mid+1
-    elif nums[mid]<=nums[right]: # 左边界无序
+    elif nums[mid]<nums[right]: # 左边界无序
         right=mid-1
+    elif nums[mid]==nums[right]: 
+        right-=1  # 无法判断，缩小右边界
 return min_value
 ```
 
@@ -225,7 +226,7 @@ def merge_and_process(nums1, nums2):
 
    （1）滑动窗口参数：windows={}   标识符valid=0     left,right=0,0**左开右闭**，避免边界问题
 
-   （2）子串参数need： 无重复字符用集合set()、统计字符频率用Counter
+   （2）子串参数need： 无重复字符用队列deque、统计字符频率用Counter
 
    （3）记录结果参数
 
@@ -233,14 +234,14 @@ def merge_and_process(nums1, nums2):
 
    （1）判断当前元素，是否更新==窗口参数==（windows、valid、right）
 
-   （2）判断当前元素，是否==收缩窗口==
+   （2）判断是否==收缩窗口==
 
    ```python
    固定窗口: 窗口已满 if right-left>= len(子串)
    动态窗口: 合法区间内满足子串条件  while left<right and valid==len(need.keys())
    ```
    
-   收缩两步骤  （a）记录结果（b）左边界元素是否更新窗口参数（valid、windows、left）
+   （3）收缩两步骤 ：（a）更新结果  （b）左边界元素是否更新窗口参数（valid、windows、left）
 
 [links](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E6%BB%91%E5%8A%A8%E7%AA%97%E5%8F%A3%E6%A1%86%E6%9E%B6%E6%A6%82%E8%A7%88)
 
