--- a/解题方法论.md
+++ b/解题方法论.md
@@ -13,6 +13,13 @@
 - 时间复杂度O(logn)     
 - 如果没找到，==left==指向目标即将插入的位置
 
+|                       | mid比较目标 | 额外变量 | 思路                                                |
+| :-------------------- | ----------- | -------- | --------------------------------------------------- |
+| 二分查找-找目标值     | taget       |          |                                                     |
+| 二分查找-找左右边界   | taget       | ✅        | 找左边界，持续收缩右边界； 找右边界，持续收缩左边界 |
+| 旋转排序数组-找目标值 | ==left==    |          | 左右区间哪个有序-> 是否落在有序区间 ->  无序区间    |
+| 旋转排序数组-找最小值 | ==right==   | ✅        | 持续收缩无序区间                                    |
+
 ##### 1. 查找目标值
 
 ```python
@@ -34,8 +41,6 @@ def binary_search(nums, target):
 
 - 题目1：找左右边界
 - 题目2：一个数字在升序数组中出现的次数     思路：右边界-左边界+1
-
-==借助变量==  持续更新结果
 
 ```python
 def search(nums, target) -> int:
@@ -72,17 +77,7 @@ def search(nums, target) -> int:
 
 [4, 5, 6, 7, 0, 1, 2] 无重复元素
 
-|            | mid比较对象 | 思路                                                 |
-| ---------- | ----------- | ---------------------------------------------------- |
-| 查找目标值 | left        | 先判断左右区间有序，再判断目标值位于哪个区间         |
-| 查找最小值 | right       | 旋转点一定在无序区间内，用变量min_value持续更新mid值 |
-
 ###### （1）查找目标值
-
-思路：先判断左右区间有序，再判断目标值位于哪个区间。 
-
-1. 根据==左端点left==和==中点mid==，先判断左右区间有序，
-2. 再判断目标值是否在有序区间，无法判断则left+1继续查找
 
 ```python
 left,right=0,len(nums)-1
@@ -151,7 +146,7 @@ def swap(nums, left, right):
     nums[left], nums[i] = nums[i], nums[left] # 基准元素交换到对应位置，返回基准元素所在下标
     return i
 def quicksort(nums, left, right):
-    # 终止条件  等号不需要排序
+    # 终止条件  等号无序交换
     if left >= right:
       	return 
     # 单层递归逻辑   先分区，再排序左右区间
@@ -325,7 +320,7 @@ def merge_two_lists(l1, l2): # 归并排序
 
 ### 1. 深度优先遍历DFS
 
-#### 递归三步骤
+递归三步骤
 
 1. 确定参数和返回值
 2. 确定终止条件 
@@ -357,7 +352,7 @@ return result
 
 ### 2. 广度优先搜索（BFS）
 
-#### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
+[层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
 1. 初始化队列deque ,装入根节点
 2. 遍历当前层，记录并装入左右孩子
