--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -60,9 +60,7 @@ return result
 
 
 
-### 1. 自身以外数组的乘积
 
-思路：前缀乘   后缀乘，不包含自身
 
 ### 2. 轮转数组
 
@@ -156,42 +154,6 @@ for i in range(1, len(intervals)):
     else:  # 没有重叠
         result.append([cur_left, cur_right])  # 直接加入当前区间
 return result
-```
-
-### 8. 和为 K 的子数组
-
-题目：整数数组 nums 和一个整数 k ，统计和为 k 的子数组的个数 
-
-思路： 用前缀和+哈希表
-
-- 哈希表{前缀和：出现次数}       
-
-  初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
-
-- `prefix[右]- 区间和k = prefix[左]`，则`prefix[左]`次数满足条件
-
-```python
- def subarray_sum(nums, k):
-    # 初始化前缀和和计数哈希表
-    prefix_sum = 0
-    count = 0
-    prefix_map = {0:1}  # 初始前缀和为0的出现次数为1
-    
-    # 遍历数组
-    for num in nums:
-        prefix_sum += num  # 更新当前前缀和
-        
-        # 如果存在 prefix_sum - k，则说明有子数组和为 k
-        if prefix_sum - k in prefix_sum_map.keys():
-            count += prefix_map[prefix_sum - k]  # 累加出现的次数
-        # 每步都更新
-				prefix_map[prefix_sum] = prefix_map.get(prefix_sum, 0) + 1
-    return count
-
-# 示例
-nums = [1, 2, 3]
-k = 3
-print(subarray_sum(nums, k))  # 输出：2
 ```
 
 
@@ -306,9 +268,51 @@ return len(nums)+1
 
 
 
-### ⭐️ 接雨水
+## 前缀和
 
-双指针思路： 1. 构建左最大值数组，包含自身  2. 右最大数组  3. 计算接水量，注意两侧柱子不存水
+### 1. 自身以外数组的乘积
+
+思路：前缀乘   后缀乘，不包含自身
+
+### 2. 和为 K 的子数组
+
+题目：整数数组 nums 和一个整数 k ，统计和为 k 的子数组的个数 
+
+思路： 用前缀和+哈希表
+
+- 哈希表{前缀和：出现次数}       
+
+  初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
+
+- `prefix[右]- 区间和k = prefix[左]`，则`prefix[左]`次数满足条件
+
+```python
+ def subarray_sum(nums, k):
+    # 初始化前缀和和计数哈希表
+    prefix_sum = 0
+    count = 0
+    prefix_map = {0:1}  # 初始前缀和为0的出现次数为1
+    
+    # 遍历数组
+    for num in nums:
+        prefix_sum += num  # 更新当前前缀和
+        
+        # 如果存在 prefix_sum - k，则说明有子数组和为 k
+        if prefix_sum - k in prefix_sum_map.keys():
+            count += prefix_map[prefix_sum - k]  # 累加出现的次数
+        # 每步都更新
+				prefix_map[prefix_sum] = prefix_map.get(prefix_sum, 0) + 1
+    return count
+
+# 示例
+nums = [1, 2, 3]
+k = 3
+print(subarray_sum(nums, k))  # 输出：2
+```
+
+### ⭐️ 3. 接雨水
+
+思路： 1. 构建左最大值数组，包含自身  2. 右最大数组  3. 计算接水量，注意两侧柱子不存水
 
 ```python
 class Solution:
@@ -335,7 +339,7 @@ class Solution:
         return count
 ```
 
-
+## 
 
 ## 矩阵
 
@@ -1201,63 +1205,75 @@ return result
 
 ### 1. 买卖股票的最佳时机，只能买卖一次
 
-思路：每个元素找右侧的最大值，从右向左构建最大栈
+思路：当前最大利润 =  当前价格 - 目前为止最小价格
+
+```python
+def maxProfit(prices):
+    low_price = float("inf") # 目前为止最小价格
+    result = 0
+    for i in range(len(prices)):
+        low_price = min(low_price, prices[i]) # 持续更新最小价格
+        result = max(result, prices[i] - low_price) 
+    return result
+```
 
 ### 2. 跳跃游戏
 
+|                | 思路                   | 参数                                                         | 终止条件                                      |
+| -------------- | ---------------------- | ------------------------------------------------------------ | --------------------------------------------- |
+| 是否能到达     | 持续更新==最远下标==   | cur_index当前最远下标                                        | （1）已越界（2）能到达                        |
+| 到达的最少步数 | ==最少步数==走最远范围 | cur_index 当前最远下标<br />next_index 多跳一次的最远下标<br />step 记录结果 | （1）next_index已越界（2）cur_index当前能到达 |
+
+#### （1）跳跃游戏
+
 题目：数组中的每个元素代表你在该位置可以跳跃的最大长度。判断是否能跳到最后一个下标。
 
-思路：关注最大跳跃范围是否到达下标n-1位置
-
-1. 每移动一个单位，先判断是否能到达   每步都更新最远范围
-2. 如果能到达，更新最远覆盖范围，同时判断是否>=下标n-1位置
-
 ```python
-def canJump(nums):
-    max_index = 0  # 最远覆盖的下标
+def jump(nums):
+    cur_index=0
     for i in range(len(nums)):
-        # 终止条件 是否已越界
-        if i > max_index:
-            return False       
-        # 更新最大下标并判断是否能到达
-        max_index = max(max_index, i + nums[i]) 
-        if max_index >= len(nums)-1:
+        # 1. 终止条件 1）已越界  （2）能到达
+        if i>cur_index:
+            return False
+        if cur_index>=len(nums)-1:
             return True
-    return False 
+
+        # 更新当前最远下标
+        cur_index=max(cur_index,i+nums[i])
+    return False
 ```
 
-### 3. 跳跃游戏II：返回最小跳跃次数
+#### （2） 跳跃游戏II：返回最小跳跃次数
 
-思路：最少步数走最远范围    
-
-1. cur_index   当前最远到达的下标
-2. next_index   在cur_index范围内，每走一步都更新 下次最远到达的下标
-3. step  记录最小步数
+1. 终止条件 （1）已越界 （2）能到达
+2. 更新下步最远下标
+3. 是否增加步数
 
 ```python
-def jump(self, nums: List[int]) -> int:
-    if len(nums) <= 1:
-        return 0  # 只有一个元素时，不需要跳跃
-    cur_index=0
-    next_index=0
+def jump(nums):
+    if len(nums)<=1:
+        return 0
+    # 参数
+    cur_index=0 # 当前最远下标
+    next_index=0 # 增加一次步数的最远下标
+    # 记录结果
     step=0
+
     for i in range(len(nums)):
-        next_index= max(next_index,i+nums[i]) # 每步都更新下次最远到达的下标
-        if i>cur_index:
-            return -1 # 无法到达
-        elif i<cur_index:
-            continue  # 继续走
-        elif i==cur_index:
-            # 更新下一步
+        # 1. 终止条件 （1）已越界   （2）能到达
+        if i>next_index:
+            return -1
+        if cur_index>=len(nums)-1:
+            return step
+
+        # 2. 更新下步最远下标
+        next_index=max(next_index,i+nums[i])
+        # 3. 是否增加步数
+        if i==cur_index:
             cur_index=next_index
             step+=1
-            # 判断是否已经满足条件
-            if cur_index>=len(nums)-1:
-                return step
     return step
 ```
-
-
 
 ## 动态规划
 
