梳理二分查找

--- a/解题方法论.md
+++ b/解题方法论.md
@@ -17,6 +17,7 @@
 | :-------------------- | ----------- | -------- | --------------------------------------------------- |
 | 二分查找-找目标值     | taget       |          |                                                     |
 | 二分查找-找左右边界   | taget       | ✅        | 找左边界，持续收缩右边界； 找右边界，持续收缩左边界 |
+| 二维排序矩阵-找目标值 | taget       |          | 二维坐标映射到一维，正常二分                        |
 | 旋转排序数组-找目标值 | ==left==    |          | 左右区间哪个有序-> 是否落在有序区间 ->  无序区间    |
 | 旋转排序数组-找最小值 | ==right==   | ✅        | 持续收缩无序区间                                    |
 
@@ -71,6 +72,24 @@ def search(nums, target) -> int:
             left=mid+1  # 寻找右边界，收缩左边界（唯一区别）
        
     return [final_left,final_right] 
+```
+
+##### 3. 搜索二维矩阵
+
+```python
+all_length = len(matrix)*len(matrix[0])
+left,right=0,all_length-1 # 双闭区间
+while left<=right: # 边界也要判断
+    mid= (left+right)//2
+    i=mid//(len(matrix[0]))
+    j=mid%(len(matrix[0]))
+    if matrix[i][j]==target:
+        return True
+    elif matrix[i][j]>target:
+        right=mid-1
+    elif matrix[i][j]<target:
+        left=mid+1
+return False
 ```
 
 ##### 3. 旋转排序数组
