--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -403,9 +403,41 @@ for i in range(len(matrix)):
 
 ## 排序
 
-### 1. 查找数组第K大的元素
+### 快速排序
 
-思路：堆排序
+#### ❓1. 颜色分类
+
+题目：给定一个包含 n 个元素的整数数组 nums，其中每个元素的值为 0、1 或 2，分别表示三种颜色。最终使得相同颜色的元素相邻，并且按 0、1、2 的顺序排列。
+
+```
+输入：[2, 0, 2, 1, 1, 0]
+输出：[0, 0, 1, 1, 2, 2]
+```
+
+思路：三路快排，即三个指针，划分为左右区间，左区间有序，右区间无序，因为尚未遍历。
+
+- low数组开头，维护区间0    
+- mid遍历数组      
+- high数组末尾，维护区间2
+
+```python
+def sortColors(nums):
+    low, mid, high = 0, 0, len(nums)-1
+    while mid <= high: # 终止条件 mid往右  high往左，两者相遇
+        if nums[mid] == 0:  # 当前元素是0，交换到低位
+            nums[low], nums[mid] = nums[mid], nums[low]
+            low += 1
+            mid += 1
+        elif nums[mid] == 1: # 当前元素是1，无需交换，直接移动mid
+            mid += 1
+        elif nums[mid] == 2:  # 当前元素是2，交换到高位
+            nums[high], nums[mid] = nums[mid], nums[high]
+            high -= 1  # 不需要增加mid，因为交换后的元素还未被检查。
+```
+
+### 堆排序
+
+#### 1. 查找数组第K大的元素
 
 ```python
 def findKthLargest(nums, k):
@@ -1376,7 +1408,7 @@ for i in range(1,len(s)+1):  # 背包容量 1~n
 return dp[-1]
 ```
 
-#### ❓4. 单词拆分2，返回所有有效的拆分方案
+#### ❓4. 单词拆分2，返回所有有效的拆分方案（hard，很少遇到）
 
 思路：动态规划+回溯
 
