合并K个升序链表

--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -480,6 +480,33 @@ k = 2
 print(findKthLargest(nums, k))  # 输出应该是 5
 ```
 
+#### 2. 合并K个升序链表
+
+思路：节点放入最小堆，每次获得最小节点
+
+```python
+#class ListNode:
+#    def __init__(self, val=0, next=None):
+#        self.val = val
+#        self.next = next
+import heapq
+def mergeKLists(lists):
+    heap = []
+    for l in lists:  #把每个链表头节点加入堆
+        if l:
+            heapq.heappush(heap, (l.val, l))  # 使用节点值和节点本身,构建 最小堆
+
+    dummy = ListNode()  # 虚拟头节点
+    current = dummy
+    while heap:
+        val, node = heapq.heappop(heap)  # 取出堆顶节点
+        current.next = node  # 加入结果链表
+        current = current.next
+        if node.next:  # 如果还有后续节点，加入堆
+            heapq.heappush(heap, (node.next.val, node.next))
+    return dummy.next
+```
+
 
 
 
