梳理dp子序列问题

--- a/解题方法论.md
+++ b/解题方法论.md
@@ -17,7 +17,7 @@
 | :-------------------- | ----------- | -------- | --------------------------------------------------- |
 | 二分查找-找目标值     | taget       |          |                                                     |
 | 二分查找-找左右边界   | taget       | ✅        | 找左边界，持续收缩右边界； 找右边界，持续收缩左边界 |
-| 二维排序矩阵-找目标值 | taget       |          | 二维坐标映射到一维，正常二分                        |
+| 二维排序矩阵-找目标值 | taget       |          | 二维坐标映射到一维，然后二分                        |
 | 旋转排序数组-找目标值 | ==left==    |          | 左右区间哪个有序-> 是否落在有序区间 ->  无序区间    |
 | 旋转排序数组-找最小值 | ==right==   | ✅        | 持续收缩无序区间                                    |
 
@@ -102,7 +102,7 @@ return False
 left,right=0,len(nums)-1
 while left<=right: # 等于也要比 边界
     mid= (left+right)//2
-    # 找到目标值，停止
+    # 终止条件  找到目标值
     if nums[mid]==target:
         return mid
 
@@ -116,8 +116,8 @@ while left<=right: # 等于也要比 边界
             left=mid+1
         else:
             right=mid-1
-    elif nums[left]==nums[mid]:
-        left+=1  # 无法判断，缩小左边界
+    elif nums[left]==nums[mid]: # 无法判断时缩小边界
+        left+=1  
 return -1
 ```
 
@@ -165,13 +165,13 @@ def swap(nums, left, right):
     nums[left], nums[i] = nums[i], nums[left] # 基准元素交换到对应位置，返回基准元素所在下标
     return i
 def quicksort(nums, left, right):
-    # 终止条件  等号无序交换
+    # 终止条件  等号无需交换
     if left >= right:
       	return 
     # 单层递归逻辑   先分区，再排序左右区间
     base_index = swap(nums, left, right) # 返回基准值下标 
-    quicksort(nums, left, base_index - 1)  
-    quicksort(nums, base_index + 1, right) 
+    quicksort(nums, left, base_index-1)  
+    quicksort(nums, base_index+1, right) 
 ```
 
 #### 堆排序Heap
@@ -224,10 +224,9 @@ def merge_and_process(nums1, nums2):
             merged.append(nums2[j])
             j += 1
     merged.extend(nums1[i:]) # nums1可能剩余，追加
-    merged.extend(nums2[j:])
-    n = len(merged)
-    if n % 2 == 1:
-        return merged[n // 2] #奇数长度
+    merged.extend(nums2[j:]) 
+    if len(merged) % 2 == 1:
+        return merged[n//2] # 奇数长度
     else:
         return (merged[n//2-1] + merged[n//2])/2 # 偶数长度
 ```
@@ -246,7 +245,7 @@ def merge_and_process(nums1, nums2):
 
 2. 遍历字符串 `right<len(s)`   right是即将遍历的下标
 
-   （1）判断当前元素，是否更新==窗口参数==（windows、valid、right）
+   （1）判断当前元素是否更新==窗口参数==（windows、valid、right）
 
    （2）判断是否==收缩窗口==
 
@@ -266,7 +265,7 @@ def merge_and_process(nums1, nums2):
 #### 1. 单调栈2步骤  
 
 1. 明确 当前元素  和 栈顶元素 的`> < =`三种情况
-2. 无论是否出栈，当前元素==下标==最后必须==入栈==
+2. 无论如何出栈，当前元素==下标==最后必须==入栈==
 
 ## 链表
 
@@ -287,19 +286,19 @@ def merge_and_process(nums1, nums2):
 1. 保存旧链表下一个节点
 2. 旧链表当前节点指向新链表头 
 3. 更新新链表表头
-4. 更新旧链表
+4. 更新旧链表表头
 
 ```python
 def reverse_linked_list(head):
-    new_node = None  # 新链表 初始化为None
-    cur_node = head  # 当前节点，初始化为链表的头节点
+    new_node = None  # 新链表的表头
+    cur_node = head  # 旧链表的表头
 
     # 遍历链表，直到当前节点为空   
     while cur_node:
-        next_node = cur_node.next  # 1. 保存旧链表下一个节点
-        cur_node.next = new_node  # 2. 将当前节点指向新链表头
-        new_node = cur_node  # 3.更新新链表表头
-        cur_node = new_node  # 4. 更新旧链表表头
+        next_node = cur_node.next 
+        cur_node.next = new_node 
+        new_node = cur_node 
+        cur_node = new_node 
     return new_node  # 返回新的头节点
 ```
 
@@ -309,30 +308,26 @@ def reverse_linked_list(head):
 
 ```python
 def merge_two_lists(l1, l2): # 归并排序
-    # 创建一个虚拟头节点，方便处理合并操作
-    dummy = ListNode(0)
-    cur_node = dummy  # 用于遍历和构建合并链表的指针
+    # 创建新链表
+    dummy = ListNode(0) # 虚拟头结点
+    cur_node = dummy  # 新链表表头
 
     # 遍历两个链表，直到其中一个链表为空
     while l1 and l2:
         if l1.val < l2.val:
             cur_node.next = l1
             l1 = l1.next  # 更新l1表头
-        else:
+            cur_node = cur_node.next # 更新新链表表头
+        elif l1.val > l2.val:
             current.next = l2
             l2 = l2.next  # 更新l2表头
-        
-        # 更新新链表表头
-        cur_node = cur_node.next
-
+            cur_node = cur_node.next # 更新新链表表头
     # 剩余的节点接到新链表的末尾
     if l1:
         cur_node.next = l1
     if l2:
         cur_node.next = l2
-
-    # 返回合并后的链表，去掉虚拟头节点
-    return dummy.next
+    return dummy.next  # 去掉虚拟头节点
 ```
 
 ## 二叉树
@@ -375,28 +370,26 @@ return result
 
 1. 初始化队列deque ,装入根节点
 2. 遍历当前层，记录并装入左右孩子
-4. 装入当前层所有节点值
+4. 装入当前层所有节点
 
 ```python
 class Solution:
     def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
         # 边界条件   空树
-        if not root:
+        if root is None:
             return []
-        dq = collections.deque([root]) # deque双端队列  装入根节点
-        result = []
-        while dq: # 1. 遍历每一层
-            # 2. 遍历当前层的节点   长度划分出当前层的元素个数，for pop遍历并清空当前层元素
+        dq = collections.deque([root]) # 1. 初始化队列，装入根节点
+        result = [] # 保存结果
+        while dq: 
             level = [] 
-            for _ in range(len(dq)): 
+            for _ in range(len(dq)):   # 2. 遍历当前层，记录并装入左右孩子
                 cur_node = dq.popleft() 
                 level.append(cur_node.val)
-                # 3. 装入左右子树
                 if cur_node.left: 
                     dq.append(cur_node.left)
                 if cur_node.right:
                     dq.append(cur_node.right)
-            result.append(level) # 4. 保存当前层结果
+            result.append(level) # 3. 保存当前层结果
         return result
 ```
 
@@ -405,10 +398,8 @@ class Solution:
 ### 1. 回溯三步骤
 
 1. 确定传参
-   - 全局参数：path存放结果，result存放结果集
-   - 保存结果==必须复制==
-
-2. 确定终止条件 
+   
+2. 确定终止条件   保存结果时==path必须复制==
 3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
 
 |      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                                   |
@@ -487,10 +478,69 @@ backtrack(nums,used)
 
 ## 贪心
 
-### 1. 无套路
+Tips:
 
-1. 千题千法，故不要在意数学证明。 
+1. 无固定套路，千题千法，故不要死磕数学证明。 
 2. 思路：想清楚局部最优，想清楚全局最优，感觉可以推出，且想不出反例
+
+### 2. 跳跃游戏
+
+|                | 思路                   | 参数                                                         | 终止条件                                      |
+| -------------- | ---------------------- | ------------------------------------------------------------ | --------------------------------------------- |
+| 是否能到达     | 持续更新==最远下标==   | cur_index 当前最远下标                                       | （1）已越界（2）能到达                        |
+| 到达的最少步数 | ==最少步数==走最远范围 | cur_index 当前最远下标<br />next_index 多跳一次的最远下标<br />step 记录结果 | （1）next_index已越界（2）cur_index当前能到达 |
+
+#### （1）跳跃游戏
+
+题目：数组中的每个元素代表你在该位置可以跳跃的最大长度。判断是否能跳到最后一个下标。
+
+```python
+def jump(nums):
+    cur_index=0
+    for i in range(len(nums)):
+        # 1. 终止条件 1）已越界  （2）能到达
+        if i>cur_index:
+            return False
+        if cur_index>=len(nums)-1:
+            return True
+        # 更新当前最远下标
+        cur_index=max(cur_index,i+nums[i])
+    return False
+```
+
+#### （2） 跳跃游戏II：返回最小跳跃次数
+
+1. 终止条件 （1）已越界 （2）能到达
+2. 更新下步最远下标
+3. 是否增加步数
+
+```python
+def jump(nums):
+    if len(nums)<=1:
+        return 0
+    # 跳跃参数
+    cur_index=0 # 当前最远下标
+    next_index=0 # 增加一次步数的最远下标
+    # 结果参数
+    step=0
+
+    for i in range(len(nums)):
+        # 1. 终止条件 （1）已越界   （2）能到达
+        if i>next_index:
+            return -1
+        if cur_index>=len(nums)-1:
+            return step
+
+        # 2. 更新下步最远下标
+        next_index=max(next_index,i+nums[i])
+        # 3. 是否增加步数
+        if i==cur_index:
+            cur_index=next_index
+            step+=1
+    return step
+```
+
+
 
 ## 动态规划
 
@@ -511,10 +561,18 @@ backtrack(nums,used)
 <img src="assets/image-20241211001418031.png" alt="image-20241211001418031" style="zoom:30%;" />
 
 1. 背包容量从==0==开始
-2. 明确3个问题   01背包or完全背包（确定正序or逆序）、组合or排列（确定顺序）、具体子问题
+2. 明确3个问题   01背包or完全背包（确定内层逆序or正序）、组合or排列（确定先物后背or先背后物）、具体子问题
 
 ![image-20250105下午73957568](./assets/image-20250105下午73957568.png)
 
 ### 3. 子序列问题
 
 1. 子序列从==空字符==开始
+
+|                  | dp定义                                                     | 递推公式                                                     |
+| ---------------- | ---------------------------------------------------------- | ------------------------------------------------------------ |
+| 最短编辑距离     | `dp[i][j]` word1前i个字符   word2前j个字符的最小编辑距离   |                                                              |
+| 最长公共子序列   | `dp[i][j]`  text1前i个字符，text2前j个字符的最长公共子序列 | 当前字符相同，则`dp[i][j] = dp[i-1][j-1]+1` <br />当前字符不同，则`dp[i][j] = max(dp[i-1][j], dp[i][j-1])` |
+| 最长连续递增序列 | `dp[i]` 以==第i个元素结尾==的最长递增子序列的长度          |                                                              |
+| 最长回文子串     | 用双指针解决                                               |                                                              |
+
