--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -1602,16 +1602,7 @@ return result
 
 ## 1. 丢硬币，已知第一次为正面，那么第二次为正面的概率是多少？  
 
-硬币每次==独立事件==，互不影响。故答案是1/2
-
-思路：条件概率公式
-$$
-P(A \mid B) = \frac{P(A \cap B)}{P(B)}
-$$
-A第二次为正面; B第一次为正面。因为独立，所以如下
-$$
-P(A \cap B) = P(A) \cdot P(B) = \frac{1}{2} \cdot \frac{1}{2} = \frac{1}{4}
-$$
+题解：条件概率公式  $P(A \mid B) = \frac{P(A \cap B)}{P(B)}$ 。硬币每次==独立事件==，互不影响。故答案是1/2
 
 
 ## ❓2. 一副扑克牌 随机平均分为3个人，某个人同时拿到大小王的概率是多少？  
