--- a/解题方法论.md
+++ b/解题方法论.md
@@ -576,3 +576,20 @@ def jump(nums):
 | 最长连续递增序列 | `dp[i]` 以==第i个元素结尾==的最长递增子序列的长度          |                                                              |
 | 最长回文子串     | 用双指针解决                                               |                                                              |
 
+
+
+# 数学
+
+## 条件概率公式
+
+$$
+P(A \mid B) = \frac{P(A \cap B)}{P(B)}
+$$
+
+- $P(A|B)$      已知B发生的前提下，A发生的概率
+- $P(A∩B)$   AB同时发生的概率
+- $P(B)$           B发生的概率
+
+## 独立性
+事件A和B独立的定义是：一个事件的发生不影响另一个事件的发生。故$P(A \cap B) = P(A) \cdot P(B)$
+
